<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onboardLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:background="#f2f2f2"
    android:gravity="right"
    android:visibility="invisible"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageActivateApp"
            android:layout_width="125dp"
            android:layout_height="116dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/v2_bkg_num" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center_horizontal|center"
            android:orientation="vertical" >

            <TextView
                style="@style/setNumberHeading3"
                android:layout_marginBottom="0dp"
                android:text="@string/selectLast" />

            <TextView
                style="@style/setNumberHeading3"
                android:layout_marginTop="0dp"
                android:text="@string/your_phone"
                android:textStyle="bold" />
        </LinearLayout>

        <Spinner
            android:id="@+id/numbersSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/butOk"
            style="@style/buttonStyle"
            android:enabled="false"
            android:text="@string/next" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/cantfindTextView"
                style="@style/sentto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cantfindyournumber" />

            <Button
                android:id="@+id/editBtt"
                style="@style/callmebtt"
                android:text="@string/edithere" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/ringcatpcha_logo_llayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal" >
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ringcatpcha_logo_codelayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp" >
        </LinearLayout>
    </RelativeLayout>

</LinearLayout><!-- From: file:/Users/mcocaro/Documents/Sandbox/Ringcaptcha/Android/Library/lib/src/main/res/layout/activity_onboard.xml -->