<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/alert_background_style"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="0dp" >

    <TextView
        style="@style/alertHeader1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="0dp"
        android:gravity="center_horizontal"
        android:paddingBottom="0dp"
        android:paddingTop="16dp"
        android:text="@string/is_your_number_correct" />

    <TextView
        android:id="@+id/resendMessage"
        style="@style/alertHeader2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:gravity="center_horizontal"
        android:paddingTop="0dp"
        android:textSize="14sp"
        android:text="+5493413547818" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="18dp"
        android:background="#dbdbdb" >
    </View>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:padding="0dp"
        android:weightSum="1" >

        <Button
            android:id="@+id/alertEditBtt"
            style="@style/alertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.5"
            android:background="@null"
            android:gravity="center_horizontal"
            android:text="@string/edit" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#dbdbdb" />

        <Button
            android:id="@+id/alertOkBtt"
            style="@style/alertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.5"
            android:background="@null"
            android:gravity="center_horizontal"
            android:text="@string/resend" />
    </LinearLayout>

</LinearLayout><!-- From: file:/Users/martin/Documents/ringcaptcha/sandbox/android/Library/lib/src/main/res/layout/resend_dialog.xml -->